fix z-index on alerts tab for Firefox

--- a/css/noted.css
+++ b/css/noted.css
@@ -269,6 +269,7 @@ ul.body_styles.menu {
 	text-decoration:none;
 	color:#fff;
 	background:rgba(0,0,0,0.5);
+	z-index:1;
 }
 
 /* ============================================
